--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,13 +1,13 @@
 /* Login.css */
 
-body {
-    background-image: url('https://i.imgur.com/xmJxVs7.png'); /* URL to your image */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* This keeps the background image fixed while scrolling */
-    background-position: center;
-  }
-  
+.main-container {
+  background-image: url('https://i.imgur.com/xmJxVs7.png'); /* URL to your image */
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* This keeps the background image fixed while scrolling */
+  background-position: absolute;
+  background-size: cover;
+}
+
   /* Style for the login container */
   .login-container {
     width: 300px;
@@ -28,7 +28,20 @@ body {
   }
   
   /* Style for labels */
-  label {
+  .username {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    color: black;
+    background-color: white;
+    border-top-left-radius: 30px 30px;
+    border-top-right-radius: 30px 30px;
+    border-bottom-left-radius: 30px 30px;
+    border-bottom-right-radius: 30px 30px;
+    width: 80px;
+  }
+
+  .password {
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
@@ -62,7 +75,7 @@ body {
   }
   
   /* Style for the h3 heading */
-  h3 {
+  .login-form {
     text-align: center;
     background-color: white;
     color:black;
@@ -74,7 +87,19 @@ body {
     margin: auto;
   }
 
-  h1{
+  .signup-form {
+    text-align: center;
+    background-color: white;
+    color:black;
+    border-top-left-radius: 30px 30px;
+    border-top-right-radius: 30px 30px;
+    border-bottom-left-radius: 30px 30px;
+    border-bottom-right-radius: 30px 30px;
+    width: 200px;
+    margin: auto;
+  }
+
+  .welcome{
     text-align: center;
     background-color: white;
     color: black;
@@ -84,5 +109,29 @@ body {
     border-bottom-right-radius: 30px 30px;
     width: 470px;
     margin: 25px auto;
+}
+
+.login-prompt {
+  text-align: center;
+  background-color: white;
+  color:black;
+  border-top-left-radius: 30px 30px;
+  border-top-right-radius: 30px 30px;
+  border-bottom-left-radius: 30px 30px;
+  border-bottom-right-radius: 30px 30px;
+  width: 200px;
+  margin: auto;
+}
+
+.signup-prompt {
+  text-align: center;
+  background-color: white;
+  color:black;
+  border-top-left-radius: 30px 30px;
+  border-top-right-radius: 30px 30px;
+  border-bottom-left-radius: 30px 30px;
+  border-bottom-right-radius: 30px 30px;
+  width: 200px;
+  margin: auto;
 }
   
