--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
         color: white;
         flex: 2;
         font-family: 'Permanent Marker', cursive;
+        font-size: 30px;
     }
 
     .menu-container {
@@ -104,11 +105,12 @@
 
 .content-container {
     font-family:'Comfortaa', cursive;
-    width: 80vw;
+    width: 50vw;
     height: 35vw;
     margin: 50px auto;
     display: flex;
     border-radius: 10px;
+    background-color: #ccc;
     box-shadow: 1px 1px 10px #ddd,
               -1px -1px 10px #ddd,
               1px -1px 10px #ddd,
@@ -166,6 +168,7 @@
 .movie-list-title {
     display: absolute;
     margin: 0 0 60px 0;
+    color:#ddd
 }
 
 .movie-list-item {
@@ -235,7 +238,7 @@
 .arrow {
     font-size: 120px;
     position: absolute;
-    top: 1075px;
+    top: 1030px;
     color: lightgrey;
     right: 0;
     opacity: 0.5;
