--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@
         flex: 2;
         font-family: 'Permanent Marker', cursive;
         font-size: 30px;
+        text-decoration-line: none;
     }
 
     .menu-container {
@@ -110,7 +111,7 @@
     margin: 50px auto;
     display: flex;
     border-radius: 10px;
-    background-color: #ccc;
+    background-color: lightgrey;
     box-shadow: 1px 1px 10px #ddd,
               -1px -1px 10px #ddd,
               1px -1px 10px #ddd,
@@ -161,14 +162,15 @@
 .movie-list {
     display: flex;
     align-items: center;
-    height: 300px;
+    height: 500px;
 
 }
 
 .movie-list-title {
     display: absolute;
     margin: 0 0 60px 0;
-    color:#ddd
+    color:#ddd;
+    font-family: 'Comfortaa', cursive;
 }
 
 .movie-list-item {
@@ -191,8 +193,8 @@
 
 .movie-list-item-img {
     transition: 1s all ease-in-out;
-    width: 200px;
-    height: 270px;
+    width: 300px;
+    height: 470px;
     object-fit: cover;
 }
 
@@ -206,6 +208,7 @@
     width: 100px;
     opacity: 0;
     transition: 1s all ease-in-out;
+    font-family: 'Comfortaa', cursive;
 }
 
 .movie-list-item-genre {
@@ -219,6 +222,7 @@
     width: 100px;
     opacity: 0;
     transition: 1s all ease-in-out;
+    font-family: 'Comfortaa', cursive;
 
 }
 
@@ -233,6 +237,7 @@
     width: 100px;
     opacity: 0;
     transition: 1s all ease-in-out;
+    font-family: 'Comfortaa', cursive;
 }
 
 .arrow {
