--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,8 +26,10 @@ body {
         flex: 2;
         font-family: 'Permanent Marker', cursive;
         font-size: 30px;
-        text-decoration-line: none;
+        a {
+            text-decoration-line: none;
     }
+}
 
     .menu-container {
         flex: 5;
@@ -52,7 +54,7 @@ body {
         flex: 2;
         display: flex;
         align-items: center;
-        color: violet;
+        color: white;
         justify-content: flex-end;
 
         .profile-picture {
@@ -87,7 +89,7 @@ body {
     margin: 50px auto;
     display: flex;
     border-radius: 10px;
-    background-color: lightgrey;
+    background-color: white;
     box-shadow: 1px 1px 10px #ddd,
               -1px -1px 10px #ddd,
               1px -1px 10px #ddd,
@@ -145,8 +147,9 @@ body {
 .movie-list-title {
     display: absolute;
     margin: 0 0 60px 0;
-    color:darkslategray;
-    font-family: 'Comfortaa', cursive;
+    color:white;
+    font-family: 'Permanent Marker', cursive;
+    text-align: center;
 }
 
 .movie-list-item {
@@ -177,13 +180,16 @@ body {
     border-radius: 5%;
 }
 
+.movie-details {
+    background-color: #333;
+}
 .movie-list-item-title {
     background-color: #333;
     color: white;
     padding: 10px;
     position: absolute;
-    top: 10%;
-    left: 50px;
+    top: 20%;
+    left: 100px;
     width: 150px;
     opacity: 0;
     transition: 1s all ease-in-out;
@@ -194,10 +200,11 @@ body {
     background-color: #333;
     color: white;
     padding: 10px;
+    margin: 10px 0 0 0;
     font-size: 14px;
     position: absolute;
-    top: 30%;
-    left: 50px;
+    top: 35%;
+    left: 100px;
     width: 150px;
     opacity: 0;
     transition: 1s all ease-in-out;
@@ -211,10 +218,11 @@ body {
     padding: 10px;
     font-size: 14px;
     position: absolute;
-    top: 40%;
-    left: 50px;
+    top: 43%;
+    left: 100px;
     width: 150px;
     opacity: 0;
     transition: 1s all ease-in-out;
     font-family: 'Comfortaa', cursive;
+    margin: 0;
 }
