--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,11 +1,23 @@
 /* Login.css */
 
 .main-container {
-  background-image: url('../background.png');
+  background-image: url('../Background.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   height: 100vh;
+}
+
+.welcome-container {
+  width: 80vw;
+  height: 70vw;
+  margin: 50px auto;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px #ddd,
+              -1px -1px 10px #ddd,
+              1px -1px 10px #ddd,
+              -1px 1px 10px #ddd;
 }
 
   /* Style for the login container */
@@ -31,6 +43,7 @@
     font-family: 'Comfortaa', cursive;
   }
   
+
   /* Style for labels */
   .username {
     font-weight: bold;
@@ -69,11 +82,10 @@
   }
   
   /* Style for the login button */
-  input[type="submit"] {
+   button {
     background-color: #007bff;
     color: white;
     padding: 10px 20px;
-    border: none;
     border-radius: 3px;
     cursor: pointer;
   }
@@ -113,8 +125,7 @@
     border-bottom-right-radius: 30px 30px;
     width: 550px;
     padding: 20px;
-    margin: 25px auto;
-    
+    margin: 25px auto;    
     font-family: 'Comfortaa', cursive;
 }
 
